--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,8 @@ td, th /* Mettre une bordure sur les td ET les th */
     border: 1px solid black;
     padding: 10px;
 }
+
+img{
+	max-width: 100px;
+	max-height: 35px;
+}
